--- a/.gitignore
+++ b/.gitignore
@@ -40,3 +40,9 @@ testem.log
 # System files
 .DS_Store
 Thumbs.db
+
+# Ignorar archivos de entorno sensibles
+/src/environments/environment.prod.ts
+
+# Ignorar claves o configuraciones privadas
+/src/environments/*.private.ts
