--- a/.gitignore
+++ b/.gitignore
@@ -41,9 +41,6 @@ testem.log
 .DS_Store
 Thumbs.db
 
-# Ignorar archivos de entorno sensibles
+#environments
 /src/environments/environment.prod.ts
 /src/environments/environment.ts
-
-# Ignorar claves o configuraciones privadas
-/src/environments/*.private.ts
