--- a/package.json
+++ b/package.json
@@ -16,12 +16,15 @@
     "@angular/common": "^18.2.0",
     "@angular/compiler": "^18.2.0",
     "@angular/core": "^18.2.0",
-    "@angular/forms": "^18.2.0",
+    "@angular/forms": "^18.2.12",
     "@angular/google-maps": "^18.2.12",
     "@angular/material": "^18.2.10",
     "@angular/platform-browser": "^18.2.0",
     "@angular/platform-browser-dynamic": "^18.2.0",
     "@angular/router": "^18.2.0",
+    "@types/chart.js": "^2.9.41",
+    "chart.js": "^4.4.6",
+    "moment": "^2.30.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
